    the SWI-Prolog hook file, "swihooks.pl". This hook predicate allows a more
    user-friendly experience when using the SWI-Prolog profiler with Logtalk.
    Requires SWI-Prolog 5.10.2 (stable) or 5.11.8 (development) or later
    versions.

    Updated the library "types_loader.lgt" file to also load the heaps library
    files.

    Added an example, "profilers", featuring simple wrappers for the SICStus
    Prolog 4 profiler and the YAP count profiler.

    Added an example, "delegates", illustrating an implementation of the
    delegation design pattern.

    Added a highly experimental example, "chr", of CHR integration. Currently
    requires the use of Qu-Prolog, SICStus Prolog, SWI-Prolog, or YAP as the
    back-end Prolog compiler.

    Added individual examples of using B-Prolog Action Rules within objects
    to the "constraints/bp" example.

    Updated the "cc" example, adding support for Qu-Prolog, adding an
    operating_system_type/1 predicate, and correcting the declaration
    of the predicate shell/1.

    Updated the "help" example, allowing it to be loaded when using any
    supported back-end Prolog compiler.

    Updated the "benchmarks" example in order to use more realistic tests for
    the database built-in predicates and the methods assertz/1 and retract/1.

    Updated the "operators" example in order to avoid a unit test failure
    when reloading the "triple.lgt" source file.

    Updated the "modules" example in order to use the use_module/2 directive
    (which is supported by Logtalk) instead of the use_module/1 directive
    (which is only supported for some back-end Prolog compilers) in the
    "client" module.

    Updated the "problog" example. Logtalk integration with ProbLog is
    improved it requires but the latest development version of ProbLog.

    Added a fully connected graph path search problem, contributed by
    Theofrastos Mantadelis, to the "benchmarks" example.
