@@ -1,0 +1,4 @@
+
+:- initialization(
+	logtalk_load([diagrams])
+). 
