@@ -1,0 +1,11 @@
+
+:- object(tests,
+	extends(lgtunit)).
+
+	:- info([
+		version is 1.0,
+		author is 'Paulo Moura',
+		date is 2010/11/19,
+		comment is 'Unit tests for the "diagrams" example.']).
+
+:- end_object.
